--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     background-color: #14131a;
@@ -136,6 +139,11 @@ padding: 0 20px;
     padding-left: 40px;
     text-decoration: none;
     list-style: none;
+}
+
+.card>img{
+    border-radius: 10px 10px 0 0;
+   
 }
 .nav-cont{
     padding-top: 30px;
@@ -321,18 +329,19 @@ footer{
 
 .contact-me {
     width: 100%;
+    max-width: 680px;
     margin: 20px auto;
     padding: 20px;
     background-color: #2a2930;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: block;
     /* justify-content: center; */
     /* align-items: center; */
     /* align-content: center; */
 }
 .contactContainer{
     width: 100%;
+    /* max-width: 670px; */
     /* height: auto; */
     display: flex;
     justify-content: center;
