--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 html{
     scroll-behavior: smooth;
+    scroll-padding-top: 70px;
 }
 
 body{
@@ -119,11 +120,11 @@ padding: 0 20px;
 .opt-lk>a{
     font-size: 1.1rem;
     text-decoration: none;
-    color: #677586;
+    color: #a3b6cf;
     transition:  all 0.3s ease;
 }
 .opt-lk>a>i{
-    font-size: 1.6rem;
+    font-size: 1.3rem;
 }
 
 .Socl{
@@ -135,7 +136,7 @@ padding: 0 20px;
 .nav-bar{
     display: flex;
     flex-direction: column;
-    gap: 26px;
+    gap: 20px;
     padding-left: 40px;
     text-decoration: none;
     list-style: none;
@@ -301,7 +302,7 @@ footer{
     margin: 0;
 }
 .opt-lk>a:hover{
-    font-size: 1.3rem;
+    transform: scale(1);
     transition:  all 0.4s ease;
     color: white;
     
@@ -582,7 +583,7 @@ textarea {
         font-size: 1.5rem;
     }
     .opt-lk>a:hover{
-        font-size: 2rem;
+        transform: scale(1);
     }
     .opt-lk{
         list-style: none;
@@ -631,7 +632,7 @@ textarea {
         overflow: hidden;
     }
     .nav-bar2>li>a:hover{
-        font-size: 1.3rem;
+        transform: scale(1);
         color: white;
         transition:  all 0.4s ease;
     }
