--- a/style.css
+++ b/style.css
@@ -402,23 +402,30 @@ textarea {
 
 .cardCont {
 
-    font-size: 18px;
-    padding: 20px;
-    gap: 20px;
-    border-radius: 10px;
-    background: #2a2930;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
+font-size: 18px;
+
+padding: 20px;
+
+gap: 20px;
+
+border-radius: 10px;
+
+background: #2a2930;
+
+display: flex;
+
+justify-content: flex-start;
+
+align-items: center;
+
+overflow-x: scroll;
+
+scroll-behavior: smooth;
+
+scrollbar-width: none;
 }
 
-.cardCont {
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 
 /* code for toggle button which used for the dark and light mode */
@@ -428,13 +435,22 @@ textarea {
 /* Default styles for all devices */
 
   /* Laptop/Desktop */
+@media(max-width: 1920){
+    .cardCont {
+        width: 100%;
+        height: 100%;
+    }
+}
 
-
-  @media all and  (min-width:920px) and (max-width: 1024px) {
+  @media all and  (min-width:920px) and (max-width: 1220px) {
     .right-flex {
         width: calc(100% - 145px);
         margin-left: 220px;
         margin-top: 15px;
+    }
+    .cardCont {
+        width: 100%;
+        height: 100%;
     }
   }
   
@@ -478,6 +494,10 @@ textarea {
         height: 100%;
         background-size: 30%;
     }
+    .cardCont {
+        width: 100%;
+        height: 100%;
+    }
 }
 
   /* Mobile */
@@ -485,6 +505,10 @@ textarea {
     *{
         margin: 0;
         padding: 0;
+    }
+    .cardCont {
+        width: 100%;
+        height: 100%;
     }
     .flex{
         width: 100%;
